<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alpha_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp">

        <LinearLayout
            android:id="@+id/statLinearLayout1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/currentEnergyTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/energy" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="6dp"
                android:paddingEnd="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="E" />

                <ProgressBar
                    android:id="@+id/energyProgressBar"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="6dp"
                    android:layout_gravity="center"
                    android:max="100"
                    android:paddingHorizontal="6dp"
                    android:progress="50"
                    android:progressDrawable="@drawable/custom_progress_bar"
                    android:progressTint="@color/energy_green" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/drug"
                android:textColor="@color/drug_green" />

            <TextView
                android:id="@+id/currentDrugTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_00_00_00" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/travel"
                android:textColor="@color/travel_pink" />

            <TextView
                android:id="@+id/currentTravelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_00_00_00" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/statLinearLayout2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/currentNerveTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nerve" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="2dp"
                android:paddingEnd="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="N" />

                <ProgressBar
                    android:id="@+id/nerveProgressBar"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="6dp"
                    android:layout_gravity="center"
                    android:max="100"
                    android:paddingHorizontal="6dp"
                    android:progress="50"
                    android:progressDrawable="@drawable/custom_progress_bar"
                    android:progressTint="@color/nerve_red" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/booster"
                android:textColor="@color/booster_orange" />

            <TextView
                android:id="@+id/currentBoosterTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_00_00_00" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/wallet" />

            <TextView
                android:id="@+id/currentWalletTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="$0" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/statLinearLayout3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/currentHappyTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/happy" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="2dp"
                android:paddingEnd="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="H" />

                <ProgressBar
                    android:id="@+id/happyProgressBar"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="6dp"
                    android:layout_gravity="center"
                    android:max="100"
                    android:paddingHorizontal="6dp"
                    android:progress="50"
                    android:progressDrawable="@drawable/custom_progress_bar"
                    android:progressTint="@color/happy_yellow" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/medical"
                android:textColor="@color/medical_blue" />

            <TextView
                android:id="@+id/currentMedicalTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_00_00_00" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="4dp"
                    android:text="@string/event" />

                <TextView
                    android:id="@+id/currentEventTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/statLinearLayout4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/currentLifeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/life" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="2dp"
                android:paddingEnd="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="L" />

                <ProgressBar
                    android:id="@+id/lifeProgressBar"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="6dp"
                    android:layout_gravity="center"
                    android:max="100"
                    android:paddingHorizontal="6dp"
                    android:progress="50"
                    android:progressDrawable="@drawable/custom_progress_bar"
                    android:progressTint="@color/life_blue" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/min" />

            <TextView
                android:id="@+id/currentMinTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_00_00_00" />


            <TextView
                android:id="@+id/updateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/update" />

            <TextView
                android:id="@+id/currentUpdateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_00_00_00" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
