<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/fragmentSettingsVerticalLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_author"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/fragmentSettingsHorizontalLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextKey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/edit_text_key_string"
                android:inputType="text"
                android:minHeight="48dp"
                android:autofillHints="username" />

            <Button
                android:id="@+id/buttonStore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_store_string" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewCheckRemind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_view_check_remind"
            android:textColor="@color/red"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_boolean_array"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
